--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,12 +48,13 @@ matTooltipClass="tooltip-pd" matTooltipPosition="below">
 
 </td></tr></table>
 
-<mat-sidenav-container *ngIf="this.isM" autosize>
+<mat-sidenav-container *ngIf="this.isM" autosize class="con">
         <mat-sidenav mode="over" #sidenav  position="start" >
                 
-                <div>
+                <!-- <div> -->
+                        
                 <mat-toolbar class="side">
-                        <p><button mat-button (click)="sidenav.toggle()">Vatsalyam</button></p>
+                        <p></p>
                         <mat-toolbar-row>
                         <button mat-button mat-icon-button (click)="sidenav.close()">
                                         
@@ -121,75 +122,30 @@ matTooltipClass="tooltip-pd" matTooltipPosition="below">
                                 </a>
                         </button>
                 </mat-toolbar-row>
-                </mat-toolbar>
+        </mat-toolbar>
                 
-                </div>
+                <!-- </div> -->
         </mat-sidenav>
         <mat-sidenav-content class="">
-                <div class="tblbar2 mat-elevation-z8" >
+                <div class="tblbar2  mat-elevation-z8" >
                         
-                                <button mat-icon-button (click)="sidenav.toggle()">
-                                        <mat-icon>menu</mat-icon>
+                                <button mat-icon-button (click)="sidenav.toggle()" class="navbar">
+                                        <mat-icon class="vatsalyam">menu</mat-icon>
+                                            
                                 </button>
-                         
-                                <span class="toolbar-spacer"></span>
-                                <router-outlet></router-outlet>
+                                <a [routerLink]="['home']" routerLinkActive="active" >
+                                <span 
+                                        class="vatsalyam1">Vatsalyam</span> 
+                                </a> 
+                                <span class="toolbar-spacer" (click)="sidenav.close()">
+                                <router-outlet ></router-outlet></span>
+                </div>
                         
-                </div> 
+                
         </mat-sidenav-content>
 </mat-sidenav-container>
-<router-outlet></router-outlet>
-<!-- 
-<mat-toolbar class="mb" color="accent" *ngIf="this.isM">
 
-        <mat-toolbar-row>
-                <button mat-button mat-icon-button 
-                >
-                        <a [routerLink]="['home']" routerLinkActive="active" class="mb1">
-                                <span matTooltip="Home" matTooltipClass="tooltip12"
-                                matTooltipPosition="left"
-                                class="lightmb">Home</span></a>
-                </button>
-        </mat-toolbar-row>
-        <mat-toolbar-row>
-                <button mat-button mat-icon-button 
-                matTooltip="Login" matTooltipPosition="below">
-                        <a [routerLink]="['login']" routerLinkActive="active" class="mb1">
-                                <span class="lightmb">Login</span></a>
-                </button>
-        </mat-toolbar-row>
-        <mat-toolbar-row>
-                <button mat-button mat-icon-button>
-                        <a [routerLink]="['about']" routerLinkActive="active" class="mb1">
-                                <span class="lightmb">About</span></a>
-                </button>
-        </mat-toolbar-row>
-        <mat-toolbar-row>
-                <button mat-button mat-icon-button>
-                        <a [routerLink]="['contact']" routerLinkActive="active" class="mb1">
-                                <span class="lightmb">Contact</span></a>
-                </button>
-        </mat-toolbar-row>
-        <mat-toolbar-row>
-                <button mat-button mat-icon-button>
-                        <a [routerLink]="['donate']" routerLinkActive="active" class="mb1">
-                                <span class="lightmb">Donate</span></a>
-                </button>
-        </mat-toolbar-row>
-        <mat-toolbar-row>
-                <button mat-button mat-icon-button>
-                        <a [routerLink]="['details']" routerLinkActive="active" class="mb1">
-                                <span class="lightmb">Details</span></a>
-                </button>
-        </mat-toolbar-row>
-        <mat-toolbar-row>
-        <button mat-button mat-icon-button>
-                <a [routerLink]="['mentors']" routerLinkActive="active" class="mb1">
-                <span class="lightmb">Mentors</span></a>
-</button>
-</mat-toolbar-row>
-</mat-toolbar> -->
-        
+<router-outlet></router-outlet>     
 
 <!--<app-page></app-page>-->
 <!-- <router-outlet></router-outlet> -->
