--- a/src/app/vatsalyam-year-data/vatsalyam-year-data.component.html
+++ b/src/app/vatsalyam-year-data/vatsalyam-year-data.component.html
@@ -2,7 +2,7 @@
 <div fxLayout fxLayoutAlign="center center">
   <mat-form-field fxFlex="85%">
     <input matInput type="text" 
-    (keyup)="doFilter($event.target)" placeholder="Search after selecting any of the above tab">
+    (keyup)="doFilter($event.target)" placeholder="Search by Name">
   </mat-form-field>
 </div>
 
