--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,7 @@ html, body, app-root {
   background: rgb(235, 16, 16);;
   border-radius: 7px;
   margin-bottom: 3px;
+  text-align: justify;
   /* left: -200px !important; */
   /* bottom: -10px !important; */
   border: 2px solid blue;
@@ -73,6 +74,7 @@ html, body, app-root {
     bottom:70px;
     /* right: 500px; */
     left:20%;
+    text-align: justify;
     z-index:999;
     width: 320px;
     height: 320px;
